small changes of design

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 	<!-- Иконка, которая будет на вкладке в браузере -->
 	<link rel="icon" href="/favicon.ico">
 	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700&amp;subset=cyrillic" rel="stylesheet"> 
 	<!-- Заголовок на вкладке в браузере -->
-	<title>BIV - sites creating</title>
+	<title>BIV - sites creation</title>
 
 	<!-- Подключаем наш файл со стилями, который находится в папке css-->
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -38,10 +39,10 @@
 				<div class="col-lg-5">
 					<p class="header-pretitle wow fadeInRight" data-wow-delay="0.1s">Web-developer</p>
 					<h1 class="header-title wow fadeInRight" data-wow-delay="0.2s">Igor Banchikov 'BIV</h1>
-					<p class="header-subtitle wow fadeInRight" data-wow-delay="0.3s">Layout on HTML/CSS
+					<p class="header-subtitle wow fadeInRight" data-wow-delay="0.3s">Markup HTML/CSS
 						<br>Complete creation websites</p>
 					<div class="header-button-block wow fadeInRightBig" data-wow-delay="0.4s">
-						<a href="https://vk.com/gurikin" class="header-button">Connect</a>
+						<a href="https://www.facebook.com/igor.banchikov.3" class="header-button">Connect</a>
 						<small class="header-small">*This is free</small>
 					</div>
 
@@ -56,7 +57,7 @@
 		<div class="container">
 			<div class="portfolio-block wow fadeIn">
 				<h2 class="portfolio-title">Portfolio</h2>
-				<p class="portfolio-subtitle">My sites</p>
+				<p class="portfolio-subtitle">My skills</p>
 				<div class="row">
 					<div class="col-md-6">
 						<div class="portfolio-col-1">
@@ -94,7 +95,7 @@
 				<div class="col-md-4">
 					<div class="social-block">
 						<p>Subscribe</p>
-						<a class = "wow bounceInDown" data-wow-delay="0.1s" href="https://www.facebook.com/profile.php?id=100015834551863">
+						<a class = "wow bounceInDown" data-wow-delay="0.1s" href="https://www.facebook.com/igor.banchikov.3">
 							<img src="img/socials/facebook-logo-button.png" alt="Facebook">
 						</a>
 						<a class = "wow bounceInDown" data-wow-delay="0.2s" href="#">
@@ -113,7 +114,7 @@
 				<div class="col-md-4">
 					<div class="footer-cta-block">
 						<p class="footer-cta">Write to me:</p>
-						<a href="https://vk.com/gurikin" class="footer-button">Write</a>
+						<a href="mailto: igor.gurik.in@gmail.com" class="footer-button">Write</a>
 					</div>
 				</div>
 			</div>
@@ -123,7 +124,5 @@
 	</footer>
 	<script src="scripts/wow.min.js"></script>
 	<script>new WOW().init();</script>
-
 </body>
-
 </html>
